--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: complete-production-e2e-app
-          image: devintripp/production-e2e-pipeline:CHANGNAME
+          image: devintripp/production-e2e-pipeline:1.0.0-15
           resources:
             limits:
               memory: "256Mi"
